Got rid of sub-style.css because it was redundant

--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -3,7 +3,7 @@
 <head>
 	<a href="../index.html" class="gray-button"> Back </a>	
 	<title> Brandon's Art Page </title>
-	<link rel="stylesheet" href="sub-styles.css">
+	<link rel="stylesheet" href="../styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
@@ -16,8 +16,9 @@
 	
 	<h2 class="white-text"> Door Decorations </h2>
 	<p class="center-whole">
-		<img class="minecraft-mk7"; src="art/doordecs/tracerdd.jpg" >
-		<img class="minecraft-mk7"; src="art/doordecs/ssbmiidd.jpg" >
+		<br><br><br><br>
+		<img class="door-dec"; src="art/doordecs/tracerdd.jpg" >
+		<img class="door-dec"; src="art/doordecs/ssbmiidd.jpg" >
 	</p>
 </body>
 </html>
