--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -3,7 +3,7 @@
 <head>
 	<a href="../index.html" class="gray-button"> Back </a>
 	<title>Brandon's CS Page</title>
-	<link rel="stylesheet" href="sub-styles.css">
+	<link rel="stylesheet" href="../styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 	
 	
@@ -14,7 +14,7 @@
 	<h3> <a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a> </h3>
 	<p class="center-whole"> 
 		View my Github account where I can share my programs with the world!
-	<h2 class="gray-text">
+	<h2 class="center-whole white-text">
 		Projects:
 	</h2>
 	<p class="center-whole">
