--- a/sub-cites/game.html
+++ b/sub-cites/game.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 	<a href="../index.html" class="gray-button"> Back </a>
     <title>Brandon Secret Page</title>
-	<link rel="stylesheet" href="sub-styles.css">
+	<link rel="stylesheet" href="../styles.css">
 	<center>
 	<h1> SECRET WEBPAGE OF BRANDON RUOFF </h1>
 	</center>
