--- a/sub-cites/piano.html
+++ b/sub-cites/piano.html
@@ -3,7 +3,7 @@
 <head>
 	<a href="../index.html" class="gray-button"> Back </a>	
 	<title>Brandon's Piano Page</title>
-	<link rel="stylesheet" href="sub-styles.css">
+	<link rel="stylesheet" href="../styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
