Fixed some formatting issues

--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -54,9 +54,9 @@
 		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-mercy.png?version=574083f23858ef8b7de5a3b96f49cc8e">
 		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d"> 
 		Brandon: <span class="yellow-text"> Support </span> <br> <br>
-		My name is Brandon C. Ruoff. I am busy in college, but I find the time to play Xbox when I can. My favorite character is <br>
-		actually Tracer, but I prefer to support my teammates in the pursuit of victory because of my selfless personality. <br>
-		It is due to this trait that I excel at monitoring my teammates' health and know when I should lend someone more damage in <br>
+		My name is Brandon C. Ruoff. I am busy in college, but I find the time to play Xbox when I can. My favorite character is
+		actually Tracer, but I prefer to support my teammates in the pursuit of victory because of my selfless personality.
+		It is due to this trait that I excel at monitoring my teammates' health and know when I should lend someone more damage in
 		order to penetrate the enemy team. I prefer to play Zenyatta, but I will never hesitate to play Mercy when she is needed.
 		<br> <br>
 	</p>
