--- a/sub-cites/art/minecraftmk7.html
+++ b/sub-cites/art/minecraftmk7.html
@@ -3,7 +3,7 @@
 <head>
 	<a href="../art.html" class="gray-button"> Back </a>	
 	<title> Minecraft - Mario Kart 7 Rainbow Road </title>
-	<link rel="stylesheet" href="../sub-styles.css">
+	<link rel="stylesheet" href="../../styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
