Added Practice Problems section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<a href="sub-cites/piano.html" class="gray-button"> Piano </a>
 		<a href="sub-cites/art.html" class="gray-button"> Art </a> 
 	</p>
-	<p> <img src="https://scontent.fcps1-1.fna.fbcdn.net/v/t1.0-1/p240x240/24129913_1782312491780135_1751515964843666525_n.jpg?oh=4565f694f06a9818fb9b685aa8ec0c04&oe=5B0AED0B"
+	<p> <img src="C:\Users\brand\Documents\GitHub\brandonruoff8.github.io\pictures\FacebookProfilePicMarch2018.jpg"
 		class="profile-pic">
 	</p>
 	<img class="small-pic" id="imageId" src="https://brain-images-ssl.cdn.dixons.com/8/1/10153218/u_10153218.jpg" >
