--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -15,11 +15,14 @@
 	<p class="center-whole"> 
 		View my Github account where I can share my programs with the world!
 	<h2 class="center-whole white-text">
+	
+	<h3> <a href="computer-science/practice-problems.html" class="gray-button">  Practice Problems </a> </h3>
+	<p class="center-whole"> 
+		Some practice problems to test my programming abilities.
+	<h2 class="center-whole white-text">
 		Projects:
 	</h2>
 	<p class="center-whole">
-		The following are some of the projects I have worked on. It is definitely not an exhaustive list of everything I have
-		done.
 	<h3> <a href="computer-science/hello_world_runnable.jar" download class="gray-button"> Hello world! </a> </h3>
 	<p class="center-whole"> 
 		Simply said, this download will make a window pop up that says "Hello!" It was my test to see if 
