Fixed profile picture

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<a href="sub-cites/piano.html" class="gray-button"> Piano </a>
 		<a href="sub-cites/art.html" class="gray-button"> Art </a> 
 	</p>
-	<p> <img src="C:\Users\brand\Documents\GitHub\brandonruoff8.github.io\pictures\FacebookProfilePicMarch2018.jpg"
+	<p> <img src="pictures\FacebookProfilePicMarch2018.jpg"
 		class="profile-pic">
 	</p>
 	<img class="small-pic" id="imageId" src="https://brain-images-ssl.cdn.dixons.com/8/1/10153218/u_10153218.jpg" >
