Improved Overwatch page formatting

--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -4,65 +4,75 @@
 	<a href="../index.html" class="gray-button"> Back </a>
 	<title>Brandon's Overwatch Page</title>
 	<link rel="stylesheet" href="../styles.css">
-	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
 </head>
-<body>
+<body class="overwatch-layout white-text">
 	<h1 class="center-whole"> Overwatch </h1>
-	<p class="red-outline">
-		<!-- Logan's Overwatch characters -->
-		Logan: <span class="red-text"> DPS </span>
-		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
-		<img class="overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/16/Icon-Roadhog.png?version=7be71e3c48941c3f2415a12d15335e40">
-		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f3/Icon-pharah.png?version=65e77903992391a8f9499c9a4edf4288"> 
-		<br><br><br><br><br><br><br>
-	</p>
-	<p class="red-outline">
-		<!-- ???s's Overwatch characters -->
-		??? : <span class="red-text"> DPS </span>
-		<img class="overwatch-dps"; src="">
-		<img class="overwatch-dps"; src="">
-		<img class="overwatch-dps"; src=""> 
-		<br><br><br><br><br><br><br>
-	</p>
-	<p class="blue-outline">
-		<!-- Jeremiyah's Overwatch characters -->
-		Jeremiyah: <span class="turquoise-text"> Tank </span> / <span class="red-text"> DPS </span>
-		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/10/Icon-Soldier76.png?version=cc1fcbd8a1d814429f51c033422cd925">
-		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3e/Icon-tracer.png?version=fab76eb00269bd7492263c46982e8c72">
-		<img class="overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/28/Icon-winston.png?version=cd403f19c5ac9ac4ed0d41f41cc34dcc"> 
-		<br><br><br><br><br><br><br>
-	</p>	
-	<p class="blue-outline">
-		<!-- Joshuah's Overwatch characters -->
+	<div class="red-outline">
+		<div class="left-side">
+		Logan: <span class="red-text"> Damage </span>
+		</div>
+		<div class="right-side">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f3/Icon-pharah.png?version=65e77903992391a8f9499c9a4edf4288">
+		<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/16/Icon-Roadhog.png?version=7be71e3c48941c3f2415a12d15335e40">
+		<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
+		</div>
+	</div>
+	<br>
+	<div class="red-outline">
+		<div class="left-side">
+		???: <span class="red-text "> Damage </span> <br> <br>
+		</div>
+		<div class="right-side">
+		</div>
+	</div>
+	<br>
+	<div class="blue-outline">
+		<div class="left-side">
+		Jeremiyah: <span class="turquoise-text"> Tank </span> / <span class="red-text"> Damage </span>
+		</div>
+		<div class="right-side">
+		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/28/Icon-winston.png?version=cd403f19c5ac9ac4ed0d41f41cc34dcc"> 
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3e/Icon-tracer.png?version=fab76eb00269bd7492263c46982e8c72">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/10/Icon-Soldier76.png?version=cc1fcbd8a1d814429f51c033422cd925">
+		</div>
+	</div>
+	<br>	
+	<div class="blue-outline">
+		<div class="left-side">
 		Joshuah: <span class="lavender-text"> Off-Tank </span>
-		<img class="overwatch-defense"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/b/b1/Icon-hanzo.png?version=ebf7609cb8525e454bfac5511a804310">
-		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/95/Icon-doomfist.png?version=4bf9a60fe55a68350567d31762d3d0b6">
-		<img class="overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=fee2e13423f50ce58ea0bab606fe2248"> 
-		<br><br><br><br><br><br><br>
-	</p>
-	<p class="yellow-outline">
-		<!-- ???s's Overwatch characters -->
-		??? : <span class="yellow-text"> Support </span>
-		<img class="overwatch-healer"; src="">
-		<img class="overwatch-healer"; src="">
-		<img class="overwatch-healer"; src=""> 
-		<br><br><br><br><br><br><br>
-	</p>
-	<p class="yellow-outline">
-		<!-- Brandon's Overwatch characters -->
-		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/7d/Icon-moira.png?version=acf108ced9c432145dbbeccdb6d0b080">
-		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-mercy.png?version=574083f23858ef8b7de5a3b96f49cc8e">
-		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d"> 
-		Brandon: <span class="yellow-text"> Support </span> <br> <br>
-		My name is Brandon C. Ruoff. I am busy in college, but I find the time to play Xbox when I can. My favorite character is
-		actually Tracer, but I prefer to support my teammates in the pursuit of victory because of my selfless personality.
-		It is due to this trait that I excel at monitoring my teammates' health and know when I should lend someone more damage in
-		order to penetrate the enemy team. I prefer to play Zenyatta, but I will never hesitate to play Mercy when she is needed.
-		<br> <br>
-	</p>
-		
-		
-	</p>
+		</div>
+		<div class="right-side">
+		<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=fee2e13423f50ce58ea0bab606fe2248">
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/95/Icon-doomfist.png?version=4bf9a60fe55a68350567d31762d3d0b6">		
+		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/b/b1/Icon-hanzo.png?version=ebf7609cb8525e454bfac5511a804310">
+
+		</div>
+	</div>
+	<br>
+	<div class="yellow-outline">
+		<div class="left-side">
+		Brandon: <span class="yellow-text "> Support </span> <br> <br>
+		</div>
+		<div class="right-side">
+		 
+		<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
+		<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-mercy.png?version=574083f23858ef8b7de5a3b96f49cc8e">
+		<img class="overwatch-small overwatch-tank-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/ac/Icon-brigitte.png?version=35e3aa7553e744334205ebd0710bf384">
+		<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/7d/Icon-moira.png?version=acf108ced9c432145dbbeccdb6d0b080">		
+		<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/6/66/Icon-Lucio.png?version=647a6c7f0fc550692b1cc585fdb5c517">
+		<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/87/Icon-ana.png?version=a99c326f4572fa34a133d69a29b66758">
+		</div>
+	</div>
+	<br>
+	<div class="yellow-outline">
+		<div class="left-side">
+		???: <span class="yellow-text "> Support </span> <br> <br>
+		</div>
+		<div class="right-side">
+		</div>
+	</div>
+	
 	
 </body>
 </html>
