Improved Pokemon and Art pages

--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -8,17 +8,26 @@
 </head>
 <body>
 	<h1> Art <h1>
-	<h2 class="white-text"> <a href="art/minecraftmk7.html"> Minecraft - Mario Kart 7 Rainbow Road </h2>
-	<p class="center-whole">
-		<img class="minecraft-mk7"; src="art/minecraftmk7/20180319-001.jpg" >
-	</p>
+	<div class="center-whole">
+		<h2 class="white-text"> <a href="art/minecraftmk7.html"> Minecraft - Mario Kart 7 Rainbow Road </h2>
+		<img class="minecraft-mk7" src="art/minecraftmk7/20180319-001.jpg" >
+	</div>
 	</a>
 	
-	<h2 class="white-text"> Door Decorations </h2>
-	<p class="center-whole">
-		<br><br><br><br>
-		<img class="door-dec"; src="art/doordecs/tracerdd.jpg" >
-		<img class="door-dec"; src="art/doordecs/ssbmiidd.jpg" >
-	</p>
+	<div class="center-whole">
+		<h2 class="white-text"> Pencil </h2>
+		<div>
+		<img width="300px" src="art/colored-pencil/erupt.jpeg">
+		</div>
+		<div>
+		<img width="300px" class="rotate180" src="art/colored-pencil/ssbmii.JPG">
+		</div>
+		<div>
+		<img width="300px" src="art/colored-pencil/tracer-pencil.JPG">
+		</div>
+		<div>
+		<img width="300px" src="art/colored-pencil/rob-pencil.JPG">
+		</div>
+	</div>
 </body>
 </html>
