--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="../styles.css">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
 </head>
-<body class="overwatch-layout white-text">
+<body class="white-text">
 	<h1 class="center-whole"> Overwatch </h1>
 	<div class="red-outline">
 		<div class="left-side">
