Updated every subpage

--- a/sub-cites/piano.html
+++ b/sub-cites/piano.html
@@ -8,9 +8,58 @@
 </head>
 <body>
 	<h1> Piano </h1>
+	<div class="center-whole">
+		<h2 class="white-text"> Songs I have Mastered </h2>
+
+		<h3> Pop </h3>
+		<ul class="cul">
+			<li> Apologize - One Republic * </li>
+			<li> Safe and Sound - Capital Cities </li>
+		</ul>
+		<h3> Pok&eacute;mon Black and White</h3>
+			<ul class="cul">
+			<li> N's Farewell </li>
+			<li> Route 10 </li>
+			<li> Undella Town (Autumn, Winter, Spring) </li>
+			<li> Unwavering Emotions </li>
+			</ul>
+		<h3> Pok&eacute;mon X and Y </h3>
+			<ul class="cul">
+			<li> An Eternal Prison (AZ's Story) * </li>
+			</ul>
+		<h3> Pok&eacute;mon Mystery Dungeon Explorers of Time/Darkness </h3>
+		<ul class="cul">
+			<li> Primal Dialga's Fight to the Finish </li>
+			</ul>
+		<h3> Super Mario Galaxy </h3>
+		<ul class="cul">
+			<li> Birth </li>
+			<li> Family </li>
+			<li> Space Junk Path </li>
+			</ul>
+		<h3> Super Smash Bros </h3>
+		<ul class="cul">
+			<li> Final Destination * </li>
+		</ul>
+	</div>
+	
+	<h2 class="white-text"> Songs I Wish I Could Play </h2>
+		<ul class="cul">
+		<li> Somebody Else - The 1975 </li>
+		<li> Dark Beast Ganon Battle - Zelda: Breath of the Wild </li>
+		<li> Opelucid City (Black) - Pok&eacute;mon Black </li>
+		<li> Opelucid City (White) - Pok&eacute;mon White </li>
+		<li> Bramble Blast - Super Smash Bros. Brawl </li>
+		</ul>
+		
 	<br>
-	<h2 class="white-text"> Sheet Music I Made Based on Existing Songs </h2>
-	<p class="center-whole"> * <a href="piano/Ark_Death_Theme.pdf"> Ark Death Theme </a> 
-	</p>
+	
+	<div class="center-whole">
+		<h2 class="white-text"> Sheet Music I Made Based on Existing Songs </h2>
+		<ul class="cul">
+		<li> <a href="piano/Ark_Death_Theme.pdf"> Ark Death Theme </a> </li>
+		</ul>
+	</div>
 </body>
+* Still working on it
 </html>
