--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -7,9 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<h1> Art <h1>
+	<h1> Art </h1>
 	<div class="center-whole">
 		<h2 class="white-text"> <a href="art/minecraftmk7.html"> Minecraft - Mario Kart 7 Rainbow Road </h2>
+		Click image to view more
+		<br>
 		<img class="minecraft-mk7" src="art/minecraftmk7/20180319-001.jpg" >
 	</div>
 	</a>
@@ -17,17 +19,25 @@
 	<div class="center-whole">
 		<h2 class="white-text"> Pencil </h2>
 		<div>
-		<img width="300px" src="art/colored-pencil/erupt.jpeg">
+			<img width="300px" src="art/colored-pencil/erupt.jpeg">
 		</div>
 		<div>
-		<img width="300px" class="rotate180" src="art/colored-pencil/ssbmii.JPG">
+			<img width="300px" class="rotate180" src="art/colored-pencil/ssbmii.JPG">
 		</div>
 		<div>
-		<img width="300px" src="art/colored-pencil/tracer-pencil.JPG">
+			<img width="300px" src="art/colored-pencil/tracer-pencil.JPG">
 		</div>
 		<div>
-		<img width="300px" src="art/colored-pencil/rob-pencil.JPG">
+			<img width="300px" src="art/colored-pencil/rob-pencil.JPG">
 		</div>
 	</div>
+	
+	<div class="center-whole">
+		<h2 class="white-text"> Adobe Illustrator </h2>
+		<div>
+			<img width="300px" src="art/adobe-illustrator/giesteon-ai.jpeg">
+		</div>
+	
+	
 </body>
 </html>
