--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -10,7 +10,8 @@
 	<h1 class="center-whole"> Overwatch </h1>
 	<div class="red-outline">
 		<div class="left-side">
-		Logan: <span class="red-text"> Damage </span>
+		Logan: <span class="red-text"> Damage </span> <br><br>
+		Always locks in DPS and ... maybe ... gets a lot of kills?
 		</div>
 		<div class="right-side">
 		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f3/Icon-pharah.png?version=65e77903992391a8f9499c9a4edf4288">
@@ -29,7 +30,8 @@
 	<br>
 	<div class="blue-outline">
 		<div class="left-side">
-		Jeremiyah: <span class="turquoise-text"> Tank </span> / <span class="red-text"> Damage </span>
+		Jeremiyah: <span class="turquoise-text"> Tank </span> / <span class="red-text"> Damage </span> <br><br>
+		Knowledgable on the topic of Overwatch. Good at making calls, choosing the right heroes for the job, and leading the team to victory.
 		</div>
 		<div class="right-side">
 		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/28/Icon-winston.png?version=cd403f19c5ac9ac4ed0d41f41cc34dcc"> 
@@ -40,7 +42,8 @@
 	<br>	
 	<div class="blue-outline">
 		<div class="left-side">
-		Joshuah: <span class="lavender-text"> Off-Tank </span>
+		Joshuah: <span class="turquoise-text"> Tank </span> / <span class="red-text"> Damage </span> <br><br>
+		A balanced player with strong abilities in gaming. Very easy to work with because of his serene mindset and lax nature.
 		</div>
 		<div class="right-side">
 		<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=fee2e13423f50ce58ea0bab606fe2248">
@@ -52,7 +55,8 @@
 	<br>
 	<div class="yellow-outline">
 		<div class="left-side">
-		Brandon: <span class="yellow-text "> Support </span> <br> <br>
+		Brandon: <span class="yellow-text "> Support </span> <br><br>
+		Selfless teammate. Great at healing and keeping allies alive and in the battle.
 		</div>
 		<div class="right-side">
 		 
