Made small appearance changes

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -35,56 +35,84 @@
 	<div class="right-side white-outline center-whole">
 		<h2 class="white-text"> The Main Team </h2>
 		<div>
-			<span class="yellow-text"> Galvantula </span>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
+			<br>
+			<span class="yellow-text"> Galvantula </span>
 		</div>
 		<div>
-			<span class="purple-text"> Noivern </span>	
 			<img src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif">
+			<br>
+			<span class="purple-text"> Noivern </span>	
 		</div>
+		<br>
 		<div>
-			<span class="red-text"> Rotom-Heat </span>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif">
+			<br>
+			<span class="red-text"> Rotom-Heat </span>
 		</div>
+		<br>
 		<div>
-			<span class="turquoise-text"> Klinklang </span>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif">
-		<div>
-			<span class="pink-text"> Sylveon </span>
-			<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
+			<br>
+			<span class="turquoise-text"> Klinklang </span>
 		</div>
+		<br>
 		<div>
-			<span class="white-text"> Mega Medicham </span>
+			<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
+			<br>
+			<span class="light-pink-text"> Sylveon </span>
+		</div>
+		<br>
+		<div>
+			<img src="http://www.smogon.com/dex/media/sprites/xy/medicham.gif">
+			<br>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
+			<br>
+			<span class="white-text"> Medicham </span>
+			<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
 		</div>
 		
 		<br>
 		
 		<h2 class="white-text"> The Sand Gym Team </h2>
 		<div>
-			<span class="tan-text"> Hippowdon </span>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/hippowdon.gif">
+			<br>
+			<span class="tan-text"> Hippowdon </span>
 		</div>
+		<br>
 		<div>
-			<span class="pink-text"> Gastrodon </span>	
 			<img src="http://www.smogon.com/dex/media/sprites/xy/gastrodon.gif">
+			<br>
+			<span class="pink-text"> Gastrodon </span>	
 		</div>
+		<br>
 		<div>
-			<span class="maroon-text"> Excadrill </span>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/excadrill.gif">
+			<br>
+			<span class="maroon-text"> Excadrill </span>
 		</div>
+		<br>
 		<div>
 		<br>
-			<span class="purple-text"> Nidoking </span>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/nidoking.gif">
+			<br>
+			<span class="purple-text"> Nidoking </span>
 		</div>
+		<br>
 		<div>
-			<span class="lavender-text"> Gliscor </span>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/gliscor.gif">
+			<br>
+			<span class="lavender-text"> Gliscor </span>
 		</div>
+		<br>
 		<div>
-			<span class="navy-text"> Mega Garchomp </span>
+			<img src="http://www.smogon.com/dex/media/sprites/xy/garchomp.gif">
+			<br>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/garchomp-mega.gif">
+			<br>
+			<span class="draco-text"> Garchomp </span>
+			<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
 		</div>
 	</div>	
 </body>
