--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -9,35 +9,38 @@
 <body>
 	<h1> Art </h1>
 	<div class="center-whole">
-		<h2 class="white-text"> <a href="art/minecraftmk7.html"> Minecraft - Mario Kart 7 Rainbow Road </h2>
+		<h2 class="white-text"> <a href="art/minecraftmk7.html"> Minecraft </h2>
+		<h3> Mario Kart 7  - Rainbow Road </h3>
 		Click image to view more
 		<br>
-		<img class="minecraft-mk7" src="art/minecraftmk7/20180319-001.jpg" >
+		<img class="mc-mk7-cover" src="art/minecraftmk7/20180319-001.jpg" >
 	</div>
 	</a>
 	
 	<div class="center-whole">
 		<h2 class="white-text"> Pencil </h2>
 		<div>
-			<img width="300px" src="art/colored-pencil/erupt.jpeg">
+			<img width="250px" src="art/colored-pencil/erupt.jpeg">
+			<img width="250px" src="art/colored-pencil/mega-bronzong.JPG">
+			<img width="250px" class="rotate180" src="art/colored-pencil/ssbmii.JPG">
+			<img width="250px" src="art/colored-pencil/tracer-pencil.JPG">
+			<img width="250px" src="art/colored-pencil/rob-pencil.JPG">
 		</div>
+	</div>
+	
+	<div class="center-whole">
+		<h2 class="white-text"> Permanent Marker </h2>
 		<div>
-			<img width="300px" class="rotate180" src="art/colored-pencil/ssbmii.JPG">
-		</div>
-		<div>
-			<img width="300px" src="art/colored-pencil/tracer-pencil.JPG">
-		</div>
-		<div>
-			<img width="300px" src="art/colored-pencil/rob-pencil.JPG">
+			<img width="250px" src="art/perm-marker/drugs.jpg">
 		</div>
 	</div>
 	
 	<div class="center-whole">
 		<h2 class="white-text"> Adobe Illustrator </h2>
 		<div>
-			<img width="300px" src="art/adobe-illustrator/giesteon-ai.jpeg">
+			<img width="250px" src="art/adobe-illustrator/giesteon-ai.jpeg">
 		</div>
-	
+	</div>
 	
 </body>
 </html>
