Improved Pokemon and Overwatch pages

--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -10,8 +10,13 @@
 	<h1 class="center-whole"> Overwatch </h1>
 	<div class="red-outline">
 		<div class="left-side">
-		Logan: <span class="red-text"> Damage </span> <br><br>
-		Always locks in DPS and ... maybe ... gets a lot of kills?
+			<span class="damage-headline-left"> Damage </span><span class="player-headline-right"> Logan </span> 
+			<br>
+			<span class="gamertag-headline"> RinoSlayer </span>
+			<br>
+			<div class="white-outline">
+			Always locks in DPS and ... maybe ... gets a lot of kills?
+			</div>
 		</div>
 		<div class="right-side">
 		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f3/Icon-pharah.png?version=65e77903992391a8f9499c9a4edf4288">
@@ -22,7 +27,7 @@
 	<br>
 	<div class="red-outline">
 		<div class="left-side">
-		???: <span class="red-text "> Damage </span> <br> <br>
+		<span class="damage-headline-left"> Damage </span><span class="player-headline-right"> ??? </span> <br><br>
 		</div>
 		<div class="right-side">
 		</div>
@@ -30,8 +35,13 @@
 	<br>
 	<div class="blue-outline">
 		<div class="left-side">
-		Jeremiyah: <span class="turquoise-text"> Tank </span> / <span class="red-text"> Damage </span> <br><br>
-		Knowledgable on the topic of Overwatch. Good at making calls, choosing the right heroes for the job, and leading the team to victory.
+			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Jeremiyah </span><span class="damage-headline-right"> Damage </span> 
+			<br>
+			<span class="gamertag-headline"> Jesus was OK </span>
+			<br>
+			<div class="white-outline">
+			Knowledgable on the topic of Overwatch. Good at making calls, choosing the right heroes for the job, and leading the team to victory.
+			</div>
 		</div>
 		<div class="right-side">
 		<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/28/Icon-winston.png?version=cd403f19c5ac9ac4ed0d41f41cc34dcc"> 
@@ -42,36 +52,52 @@
 	<br>	
 	<div class="blue-outline">
 		<div class="left-side">
-		Joshuah: <span class="turquoise-text"> Tank </span> / <span class="red-text"> Damage </span> <br><br>
-		A balanced player with strong abilities in gaming. Very easy to work with because of his serene mindset and lax nature.
+			<span class="tank-headline-left"> Tank </span><span class="player-headline-mid"> Joshuah </span><span class="damage-headline-right"> Damage </span>
+			<br>
+			<span class="gamertag-headline"> WhiteWadeWilson </span>
+			<br>
+			<div class="white-outline">
+			A balanced player with strong abilities in gaming. Very easy to work with because of his serene mindset and lax nature.
+			</div>
 		</div>
 		<div class="right-side">
-		<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=fee2e13423f50ce58ea0bab606fe2248">
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/95/Icon-doomfist.png?version=4bf9a60fe55a68350567d31762d3d0b6">		
-		<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/b/b1/Icon-hanzo.png?version=ebf7609cb8525e454bfac5511a804310">
-
+			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=fee2e13423f50ce58ea0bab606fe2248">
+			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/95/Icon-doomfist.png?version=4bf9a60fe55a68350567d31762d3d0b6">		
+			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/b/b1/Icon-hanzo.png?version=ebf7609cb8525e454bfac5511a804310">
 		</div>
 	</div>
 	<br>
 	<div class="yellow-outline">
 		<div class="left-side">
-		Brandon: <span class="yellow-text "> Support </span> <br><br>
-		Selfless teammate. Great at healing and keeping allies alive and in the battle.
+			<span class="support-headline-left"> Support </span><span class="player-headline-mid"> Brandon </span><span class="tank-headline-right"> Tank </span> 
+			<br>
+			<span class="gamertag-headline"> SoCcErNeMeSiS 8 </span>
+			<br>
+			<div class="white-outline">
+			Selfless teammate. Contantly watching teammates' health in order to give them the stamina to survive each battle.
+			</div>
+			<br>
+			<img src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/thumb/f/ff/Ability-tracer1.png/100px-Ability-tracer1.png?version=a4e4aa8a7ac9fcfa8051fe88db874698">
+			<img src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/thumb/d/d1/Ability-zenyatta1.png/100px-Ability-zenyatta1.png?version=dc2b18b000e61cd671ae5966d43589c3">
+			<img src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/thumb/e/ea/Ability-mercy3.png/100px-Ability-mercy3.png?version=d614146d57c5661823120a615e3c6f72">
 		</div>
 		<div class="right-side">
-		 
-		<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
-		<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-mercy.png?version=574083f23858ef8b7de5a3b96f49cc8e">
-		<img class="overwatch-small overwatch-tank-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/ac/Icon-brigitte.png?version=35e3aa7553e744334205ebd0710bf384">
-		<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/7d/Icon-moira.png?version=acf108ced9c432145dbbeccdb6d0b080">		
-		<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/6/66/Icon-Lucio.png?version=647a6c7f0fc550692b1cc585fdb5c517">
-		<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/87/Icon-ana.png?version=a99c326f4572fa34a133d69a29b66758">
+			<img class="overwatch-small overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
+			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-mercy.png?version=574083f23858ef8b7de5a3b96f49cc8e">
+			<img class="overwatch-small overwatch-tank-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/ac/Icon-brigitte.png?version=35e3aa7553e744334205ebd0710bf384">
+			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/7d/Icon-moira.png?version=acf108ced9c432145dbbeccdb6d0b080">		
+			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/6/66/Icon-Lucio.png?version=647a6c7f0fc550692b1cc585fdb5c517">
+			<img class="overwatch-small overwatch-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/8/87/Icon-ana.png?version=a99c326f4572fa34a133d69a29b66758">
+			
+			<img class="overwatch-small overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a4/Icon-orisa.png?version=25bbc92654b87b23ffcd873caf6aaf44">
+			<img class="overwatch-small overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=2ec0d3c500cf573a887d758fcdf191f9">
+			<img class="overwatch-small overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3e/Icon-tracer.png?version=355cc09f5fe14aa946f7625ff9ae4a40">
 		</div>
 	</div>
 	<br>
 	<div class="yellow-outline">
 		<div class="left-side">
-		???: <span class="yellow-text "> Support </span> <br> <br>
+		<span class="support-headline-left"> Support </span><span class="player-headline-right"> ??? </span> <br><br>
 		</div>
 		<div class="right-side">
 		</div>
