--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -15,6 +15,10 @@
 			<a href="https://serebii.net/" class="gray-button"> https://serebii.net/ </a>
 			<br><br>
 			<a href="https://pokemondb.net/" class="gray-button"> https://pokemondb.net/ </a>
+		<h2> Recent News </h2>
+		<h3> Pok&eacute;mon Coming to Switch!</h3>
+		<img width = "600px" src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fdavidthier%2Ffiles%2F2018%2F05%2FDeaLp6fVMAEzguS.jpg">
+		
 		<h2> Favorite Games </h2>
 		<div>
 			<h3> Pok&eacute;mon Black and White </h3>
@@ -22,13 +26,13 @@
 			<h3> Pok&eacute;mon Black 2 and White 2 </h3>
 			<img height="250px" src="https://assets.pokemon.com/assets/cms2/img/video-games/video-games/pokemon_black_white_2/pokemon_black_white_2_main_169.jpg">
 		</div>
-		<h3>
+		<div class="white-text">
 		Generation 5 is undoubtly the best generation. People mock the designs of the Pok&eacute;mon from that generation, but no matter what is said,
 		the designs will always be better than generation 1. Generation 5 took energy out of making every single design look <i> super cool </i>
 		and put it into creating the most original Pok&eacute;mon out of any generation ever. That's right, Generation 5 by itself included more original Pok&eacute;mon
 		then the "OG" region itself. Not to mention that generation 5 also included continuous animations during battle which hadn't been done before, 
 		creation of the Battle Spot for online battles, and of course, the best in-game story of any Pok&eacute;mon game so far. This is the only generation where the 
-		games following the original releases were <b>sequels</b>, rather than a simple remake of the same game with a few decent changes. </h3>
+		games following the original releases were <b>sequels</b>, rather than a simple remake of the same game with a few decent changes. </div>
 	</div>
 	
 	
@@ -48,7 +52,7 @@
 		<div>
 			<img src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif">
 			<br>
-			<span class="red-text"> Rotom-Heat </span>
+			<span class="red-orange-text"> Rotom-Heat </span>
 		</div>
 		<br>
 		<div>
@@ -113,6 +117,45 @@
 			<br>
 			<span class="draco-text"> Garchomp </span>
 			<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png">
+		</div>
+		
+		<h2 class="white-text"> Recent Team - Pok&eacute;mon Sun </h2>
+		<div>
+			<img src="http://www.smogon.com/dex/media/sprites/xy/toucannon.gif">
+			<br>
+			<span class="almost-black-text"> Toucannon </span>
+		</div>
+		<br>
+		<div>
+			<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc.gif">
+			<br>
+			<span class="tan-text"> Lycanroc </span>
+		</div>
+		<br>
+		<div>
+			<img src="http://www.smogon.com/dex/media/sprites/xy/ninetales-alola.gif">
+			<br>
+			<span class="white-text"> Ninetales </span>	
+		</div>
+		<br>
+		<div>
+			<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi.gif">
+			<br>
+			<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi-school.gif">
+			<br>
+			<span class="light-blue-text"> Wishiwashi </span>
+		</div>
+		<br>
+		<div>
+			<img src="http://www.smogon.com/dex/media/sprites/xy/palossand.gif">
+			<br>
+			<span class="sand-text"> Palossand </span>
+		</div>
+		<br>
+		<div>
+			<img src="http://www.smogon.com/dex/media/sprites/xy/incineroar.gif">
+			<br>
+			<span class="red-text"> Incineroar </span>
 		</div>
 	</div>	
 </body>
