Added a photo to the Art page

--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -20,11 +20,12 @@
 	<div class="center-whole">
 		<h2 class="white-text"> Pencil </h2>
 		<div>
-			<img width="250px" src="art/colored-pencil/erupt.jpeg">
-			<img width="250px" src="art/colored-pencil/mega-bronzong.JPG">
-			<img width="250px" class="rotate180" src="art/colored-pencil/ssbmii.JPG">
-			<img width="250px" src="art/colored-pencil/tracer-pencil.JPG">
-			<img width="250px" src="art/colored-pencil/rob-pencil.JPG">
+			<img width="300px" src="art/colored-pencil/erupt.jpeg">
+			<img width="300px" src="art/colored-pencil/mega-bronzong.jpg">
+			<img width="300px" src="art/colored-pencil/mega-friends.JPG">
+			<img width="300px" class="rotate180" src="art/colored-pencil/ssbmii.JPG">
+			<img width="300px" src="art/colored-pencil/tracer-pencil.JPG">
+			<img width="300px" src="art/colored-pencil/rob-pencil.JPG">
 		</div>
 	</div>
 	
